# ratkey

./: .gitignore  LICENSE  README.md  pyproject.toml
certs/: README.md
src/ratkey/: __init__.py  errors.py  hwid.py  identity.py  pin.py  proxies.py
src/ratkey/backends/: __init__.py  base.py  mock.py  nitrokey_piv.py  yubikey_piv.py
src/ratkey/backup/: __init__.py  seed_phrase.py
src/ratkey/cli/: __init__.py  main.py
